# flat

./: Cargo.toml  LICENSE  README.md  build.sh  publish.sh
examples/: housing.rs  iris.rs  zoo.rs
flat_examples/: Cargo.toml
flat_examples/examples/: iris.rs
flat_examples_pointers/: Cargo.toml
flat_examples_pointers/examples/: iris_pointers.rs
flat_examples_primitives/: Cargo.toml
flat_examples_primitives/examples/: housing.rs  zoo.rs
scripts/: render_housing.sh  render_iris.sh
src/: abbreviate.rs  aggregate.rs  categorical.rs  dagchart.rs  dataset.rs  histogram.rs  lib.rs  render.rs  schema.rs  view.rs
src/barchart/: api.rs  model.rs
src/categorical/: api.rs  model.rs
src/dagchart/: api.rs  model.rs
src/histogram/: api.rs  model.rs
src/pathchart/: api.rs  model.rs
tests/: abbreviate.rs  barchart.rs  categorical.rs  dagchart.rs  histogram.rs  main.rs  pointers.rs
