[package]
name = "flat"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["text", "graph", "chart", "plot"]
categories = ["visualization"]
description = "Project multi-dimensional data onto the **flat** textual plane."
repository = "https://github.com/sawatzkylindsey/flat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
impls_ordered_float = ["ordered-float"]
all = ["impls_ordered_float"]

[dependencies]
ordered-float = { version = "4.2.0", optional = true }

[dev-dependencies]
flat = { path = ".", features = ["all"] }
blarg = "1.0.4"
ordered-float = "4.2.0"
rstest = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
