[workspace]
members = [
    "flat_examples",
    "flat_examples_pointers",
    "flat_examples_primitives",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sawatzkylindsey/flat"

[package]
name = "flat"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["text", "graph", "chart", "plot"]
categories = ["visualization"]
description = "Project multi-dimensional data onto the **flat** textual plane."
repository = "https://github.com/sawatzkylindsey/flat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["primitive_impls"]

[features]
default = []
primitive_impls = []
pointer_impls = []

[dependencies]
ordered-float = "4.2.0"

[dev-dependencies]
auto_ops = "0.3.0"
blarg = "1.0.4"
flat = { path = "." }
rstest = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
