[package]
name = "flat_examples"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
flat = { path = "../" }
blarg = "1.0.4"
ordered-float = "4.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
