[package]
name = "flat_examples_primitives"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
auto_ops = "0.3.0"
flat = { path = "../", features = ["primitive_impls"] }
blarg = "1.0.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
